--- a/package.json
+++ b/package.json
@@ -21,11 +21,19 @@
     "express": "^4.18.2",
     "parcel": "^2.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15"
-  },
-  "type": "module"
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "@types/webpack": "^5.28.0",
+    "@webpack-cli/generators": "^3.0.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "wepack-cli": "^0.0.1-security"
+  }
 }
