--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@types/node": "^18.11.18",
     "@types/webpack": "^5.28.0",
     "@webpack-cli/generators": "^3.0.1",
+    "antd": "^5.6.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "declaration-bundler-webpack-plugin": "^1.0.3",
+    "react-router-dom": "^6.13.0",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
