--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.2.12",
     "@types/webpack": "^5.28.0",
     "@webpack-cli/generators": "^3.0.1",
     "antd": "^5.6.1",
@@ -40,5 +41,8 @@
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "wepack-cli": "^0.0.1-security"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
