Fix zombie processes left by server watch command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx webpack && npx tsc && node ./dist/server/server.js",
     "watch": "npx webpack --watch & node ./dist/server/server.js",
-    "watch_server": "npx tsc --watch & npx nodemon dist/server/server.js"
+    "watch_server": "npx tsc --watch & npx nodemon dist/server/server.js & wait"
   },
   "repository": {
     "type": "git",
