--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx webpack && npx tsc && node ./dist/server/server.js",
-    "watch": "npx webpack --watch & node ./dist/server/server.js",
+    "watch": "npx webpack --watch",
     "watch_server": "npx tsc --watch & npx nodemon dist/server/server.js & wait"
   },
   "repository": {
