--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,6 @@
     "outDir": "dist",
     "esModuleInterop": true
   },
-  "include": [
-    "src/server/*",
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/server/*"],
+  "exclude": ["node_modules"]
 }
