--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/dianezhou96/lululedger#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "express": "^4.18.2",
     "node-fetch": "^2.6.11",
     "parcel": "^2.8.2",
