--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "outDir": "dist",
     "esModuleInterop": true
   },
-  "include": ["src/server/*"],
+  "include": ["src/server/**/*"],
   "exclude": ["node_modules"]
 }
