--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.11",
     "parcel": "^2.8.2",
     "qs": "^6.11.2",
