--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "parcel": "^2.8.2",
     "qs": "^6.11.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
