--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.11",
+    "nodemailer": "^6.9.3",
     "parcel": "^2.8.2",
     "qs": "^6.11.2",
     "react": "^18.2.0",
