--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "express": "^4.18.2",
+    "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.11",
     "nodemailer": "^6.9.3",
