--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
