--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx webpack && npx tsc && node ./dist/server/server.js",
     "watch": "npx webpack --watch",
-    "watch_server": "npx tsc --watch & npx nodemon --watch dist/server/ dist/server/server.js & wait"
+    "watch_server": "npx tsc --watch & npx nodemon --watch dist/server/ dist/server/server.js & wait",
+    "build_prod": "npx webpack --mode production & npx tsc & wait"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "webpackbar": "^5.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
@@ -41,6 +43,7 @@
     "@webpack-cli/generators": "^3.0.1",
     "antd": "^5.6.1",
     "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
     "connect-livereload": "^0.6.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
