--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "express": "^4.18.2",
+    "express-static-gzip": "^2.1.7",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.11",
