--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx webpack && npx tsc && node ./dist/server/server.js",
+    "start": "npx webpack && ts-node ./src/server/server.ts",
     "watch": "npx webpack --watch",
-    "watch_server": "npx tsc --watch & npx nodemon --watch dist/server/ dist/server/server.js & wait",
+    "watch_server": "npx nodemon ./src/server/server.ts & wait",
     "build_prod": "npx webpack --mode production & npx tsc & wait"
   },
   "repository": {
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^18.11.18",
     "@types/react": "^18.2.12",
     "@types/webpack": "^5.28.0",
@@ -56,6 +57,7 @@
     "react-router-dom": "^6.13.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "wepack-cli": "^0.0.1-security"
