--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/dianezhou96/lululedger#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-static-gzip": "^2.1.7",
     "moment-timezone": "^0.5.43",
