--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Lululedger is a platform for SFIT Lululemon fundraising orders.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx webpack && ts-node ./src/server/server.ts",
     "watch": "npx webpack --watch",
     "watch_server": "npx nodemon ./src/server/server.ts & wait",
-    "build_prod": "npx webpack --mode production & npx tsc & wait"
+    "build_prod": "npx webpack --mode production & npx tsc & wait",
+    "lulurl_parser": "npm i; npx ts-node ./scripts/lulurl_parser.ts"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/dianezhou96/lululedger#readme",
   "dependencies": {
+    "@playwright/browser-chromium": "^1.42.1",
     "@sendgrid/mail": "^7.7.0",
     "express": "^4.18.2",
     "express-static-gzip": "^2.1.7",
@@ -29,6 +30,7 @@
     "node-fetch": "^2.6.11",
     "nodemailer": "^6.9.3",
     "parcel": "^2.8.2",
+    "playwright": "^1.42.1",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
